	  duplicated and was freed memory in the callback.  Affected
	  file lib/silcclient/idlist.c.

	* Do not say "you are now talking..." on JOIN command in the
	  client library.  The appliation must handle it.

	* Do not say ".. changed topic to" in command reply in the
	  client libary.  The application must handle it.

	* Fixed TOPIC command sending in the client library.

Thu May 24 19:08:55 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Imported a modified version of Irssi client to the source tree.
	  The Irssi will be used to create a new client called
	  Irssi SILC.  Imported to irssi/.

	  Added silc_core_init_finish function to the Irssi.  Affected
	  file irssi/configure.in.

	  A lot changes in the Makefile.ams around the irssi tree.

Tue May 22 22:23:49 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Do not rehash if the new size is same as the old size of the
	  hash table, in the silc_hash_table_rehash*.  The affected file
	  lib/silcutil/silchashtable.c.

	* Replaced hash_table_del_by_context calls from the server
	  (when channel->user_list and client->channels) to the
	  hash_table_del as it is sufficient and faster.

Tue May 22 17:27:16 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added silc_hash_table_list, silc_hash_table_get and the
	  SilcHashTableList structure to provide an alternative way to
	  traverse the hash table.  The affected files are
	  lib/silcutil/silchashtable.[ch].

	* Changed the server's idlist routines to use the hash table
	  routines to optimize the code.

Mon May 21 21:46:20 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Replaced the client entry's `channel' list and channel entry's
	  `user_list' list to hash tables for optimized lookup.  Changed
	  the code to use the hash table interface around the code. 
	  Affected file lib/silcd/idlist.[ch].

	* Added `auto_rehash' boolean argument to the function
	  silc_hash_table_alloc to indicate whether the hash table should