@@ -16,6 +16,9 @@ Fri May 25 14:38:38 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
 
 	* Fixed TOPIC command sending in the client library.
 
+	* Fixed a memory leak in silc_client_command_free in the file
+	  lib/silcclient/command.c.
+
 Thu May 24 19:08:55 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
 
 	* Imported a modified version of Irssi client to the source tree.
